CentOSStream9/sg/sg.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: SecurityGroup for CentOSStream9

Parameters:
  SystemName:
    Type: String
    AllowedPattern: '[a-zA-Z0-9-]*'
  EnvType:
    Description: Environment type.
    Type: String
    Default: dev
    AllowedValues: [all, dev, stg, prod]
    ConstraintDescription: must specify all, dev, stg, or prod.

Mappings:
  AzMap:
    ap-northeast-1:
      1st: ap-northeast-1a
      2nd: ap-northeast-1c
      3nd: ap-northeast-1d

Resources:
  # SecurityGroup for EC2
  SecurityGroupEC2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub
        - ${SystemName}-${EnvType}-ec2-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      GroupName: !Sub
        - ${SystemName}-${EnvType}-ec2-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      SecurityGroupIngress:
        - Description: 'SSH'
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
        - Description: 'RDP'
          CidrIp: 0.0.0.0/0
          FromPort: 3389
          ToPort: 3389
          IpProtocol: tcp
      VpcId:
        Fn::ImportValue: !Sub
          - ${SystemName}-${EnvType}-vpc
          - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
      Tags:
        - Key: Name
          Value: !Sub
            - ${SystemName}-${EnvType}-ec2-sg
            - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
        - Key: SystemName
          Value: !Ref SystemName
        - Key: EnvType
          Value: !Ref EnvType

Outputs:
  SecurityGroupEC2:
    Value: !Ref SecurityGroupEC2
    Export:
      Name: !Sub
        - ${SystemName}-${EnvType}-ec2-sg
        - {SystemName: !Ref SystemName, EnvType: !Ref EnvType}
